[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Cars/Radio.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/MusicMixer.tscn" type="PackedScene" id=2]

[node name="Radio" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -38.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 38.0

[node name="SongNameLabel" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Song Name"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 38.0
alignment = 1

[node name="PrevSongButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 416.0
margin_right = 443.0
margin_bottom = 20.0
text = "|<"

[node name="PauseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 447.0
margin_right = 473.0
margin_bottom = 20.0
text = "||"

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 477.0
margin_right = 497.0
margin_bottom = 20.0
text = ">"

[node name="NextSongButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 501.0
margin_right = 528.0
margin_bottom = 20.0
text = ">|"

[node name="VolSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 607.0
margin_bottom = 16.0
rect_min_size = Vector2( 75, 0 )
max_value = 2.0
step = 0.1
value = 1.0
ticks_on_borders = true

[node name="MusicMixer" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PrevSongButton" to="." method="_on_PrevSongButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextSongButton" to="." method="_on_NextSongButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VolSlider" to="." method="_on_VolSlider_value_changed"]
